// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests the DevPulseTable renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DevPulseTable
    loading={false}
    ratings={
        Array [
            Object {},
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Table>
          <Row
                    header={true}
          >
                    <Cell
                              Key={0}
                              addedClass=""
                              title=""
                    >
                              Week
                    </Cell>
                    <Cell
                              Key={1}
                              addedClass=""
                              title=""
                    >
                              Quantity
                    </Cell>
                    <Cell
                              Key={2}
                              addedClass=""
                              title=""
                    >
                              Quality
                    </Cell>
                    <Cell
                              Key={3}
                              addedClass=""
                              title=""
                    >
                              Initiative
                    </Cell>
                    <Cell
                              Key={4}
                              addedClass=""
                              title=""
                    >
                              Communication
                    </Cell>
                    <Cell
                              Key={5}
                              addedClass=""
                              title=""
                    >
                              Professionalism
                    </Cell>
                    <Cell
                              Key={6}
                              addedClass=""
                              title=""
                    >
                              Integration
                    </Cell>
          </Row>
          <DevPulseRow
                    Key={0}
                    rating={Object {}}
          />
</Table>,
        false,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <Row
              header={true}
>
              <Cell
                            Key={0}
                            addedClass=""
                            title=""
              >
                            Week
              </Cell>
              <Cell
                            Key={1}
                            addedClass=""
                            title=""
              >
                            Quantity
              </Cell>
              <Cell
                            Key={2}
                            addedClass=""
                            title=""
              >
                            Quality
              </Cell>
              <Cell
                            Key={3}
                            addedClass=""
                            title=""
              >
                            Initiative
              </Cell>
              <Cell
                            Key={4}
                            addedClass=""
                            title=""
              >
                            Communication
              </Cell>
              <Cell
                            Key={5}
                            addedClass=""
                            title=""
              >
                            Professionalism
              </Cell>
              <Cell
                            Key={6}
                            addedClass=""
                            title=""
              >
                            Integration
              </Cell>
</Row>,
            Array [
              <DevPulseRow
                Key={0}
                rating={Object {}}
/>,
            ],
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <Cell
                  Key={0}
                  addedClass=""
                  title=""
>
                  Week
</Cell>,
                <Cell
                  Key={1}
                  addedClass=""
                  title=""
>
                  Quantity
</Cell>,
                <Cell
                  Key={2}
                  addedClass=""
                  title=""
>
                  Quality
</Cell>,
                <Cell
                  Key={3}
                  addedClass=""
                  title=""
>
                  Initiative
</Cell>,
                <Cell
                  Key={4}
                  addedClass=""
                  title=""
>
                  Communication
</Cell>,
                <Cell
                  Key={5}
                  addedClass=""
                  title=""
>
                  Professionalism
</Cell>,
                <Cell
                  Key={6}
                  addedClass=""
                  title=""
>
                  Integration
</Cell>,
              ],
              "header": true,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "Key": 0,
                  "addedClass": "",
                  "children": "Week",
                  "title": "",
                },
                "ref": null,
                "rendered": "Week",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "Key": 1,
                  "addedClass": "",
                  "children": "Quantity",
                  "title": "",
                },
                "ref": null,
                "rendered": "Quantity",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "Key": 2,
                  "addedClass": "",
                  "children": "Quality",
                  "title": "",
                },
                "ref": null,
                "rendered": "Quality",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "Key": 3,
                  "addedClass": "",
                  "children": "Initiative",
                  "title": "",
                },
                "ref": null,
                "rendered": "Initiative",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "Key": 4,
                  "addedClass": "",
                  "children": "Communication",
                  "title": "",
                },
                "ref": null,
                "rendered": "Communication",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "Key": 5,
                  "addedClass": "",
                  "children": "Professionalism",
                  "title": "",
                },
                "ref": null,
                "rendered": "Professionalism",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "Key": 6,
                  "addedClass": "",
                  "children": "Integration",
                  "title": "",
                },
                "ref": null,
                "rendered": "Integration",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "Key": 0,
              "rating": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      false,
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Table>
            <Row
                        header={true}
            >
                        <Cell
                                    Key={0}
                                    addedClass=""
                                    title=""
                        >
                                    Week
                        </Cell>
                        <Cell
                                    Key={1}
                                    addedClass=""
                                    title=""
                        >
                                    Quantity
                        </Cell>
                        <Cell
                                    Key={2}
                                    addedClass=""
                                    title=""
                        >
                                    Quality
                        </Cell>
                        <Cell
                                    Key={3}
                                    addedClass=""
                                    title=""
                        >
                                    Initiative
                        </Cell>
                        <Cell
                                    Key={4}
                                    addedClass=""
                                    title=""
                        >
                                    Communication
                        </Cell>
                        <Cell
                                    Key={5}
                                    addedClass=""
                                    title=""
                        >
                                    Professionalism
                        </Cell>
                        <Cell
                                    Key={6}
                                    addedClass=""
                                    title=""
                        >
                                    Integration
                        </Cell>
            </Row>
            <DevPulseRow
                        Key={0}
                        rating={Object {}}
            />
</Table>,
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <Row
                header={true}
>
                <Cell
                                Key={0}
                                addedClass=""
                                title=""
                >
                                Week
                </Cell>
                <Cell
                                Key={1}
                                addedClass=""
                                title=""
                >
                                Quantity
                </Cell>
                <Cell
                                Key={2}
                                addedClass=""
                                title=""
                >
                                Quality
                </Cell>
                <Cell
                                Key={3}
                                addedClass=""
                                title=""
                >
                                Initiative
                </Cell>
                <Cell
                                Key={4}
                                addedClass=""
                                title=""
                >
                                Communication
                </Cell>
                <Cell
                                Key={5}
                                addedClass=""
                                title=""
                >
                                Professionalism
                </Cell>
                <Cell
                                Key={6}
                                addedClass=""
                                title=""
                >
                                Integration
                </Cell>
</Row>,
              Array [
                <DevPulseRow
                  Key={0}
                  rating={Object {}}
/>,
              ],
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <Cell
                    Key={0}
                    addedClass=""
                    title=""
>
                    Week
</Cell>,
                  <Cell
                    Key={1}
                    addedClass=""
                    title=""
>
                    Quantity
</Cell>,
                  <Cell
                    Key={2}
                    addedClass=""
                    title=""
>
                    Quality
</Cell>,
                  <Cell
                    Key={3}
                    addedClass=""
                    title=""
>
                    Initiative
</Cell>,
                  <Cell
                    Key={4}
                    addedClass=""
                    title=""
>
                    Communication
</Cell>,
                  <Cell
                    Key={5}
                    addedClass=""
                    title=""
>
                    Professionalism
</Cell>,
                  <Cell
                    Key={6}
                    addedClass=""
                    title=""
>
                    Integration
</Cell>,
                ],
                "header": true,
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 0,
                    "addedClass": "",
                    "children": "Week",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Week",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 1,
                    "addedClass": "",
                    "children": "Quantity",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Quantity",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 2,
                    "addedClass": "",
                    "children": "Quality",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Quality",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 3,
                    "addedClass": "",
                    "children": "Initiative",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Initiative",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 4,
                    "addedClass": "",
                    "children": "Communication",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Communication",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 5,
                    "addedClass": "",
                    "children": "Professionalism",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Professionalism",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 6,
                    "addedClass": "",
                    "children": "Integration",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Integration",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "Key": 0,
                "rating": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        false,
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`tests the DevPulseTable renders correctly 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DevPulseTable
    loading={true}
    ratings={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Table>
          <Row
                    header={true}
          >
                    <Cell
                              Key={0}
                              addedClass=""
                              title=""
                    >
                              Week
                    </Cell>
                    <Cell
                              Key={1}
                              addedClass=""
                              title=""
                    >
                              Quantity
                    </Cell>
                    <Cell
                              Key={2}
                              addedClass=""
                              title=""
                    >
                              Quality
                    </Cell>
                    <Cell
                              Key={3}
                              addedClass=""
                              title=""
                    >
                              Initiative
                    </Cell>
                    <Cell
                              Key={4}
                              addedClass=""
                              title=""
                    >
                              Communication
                    </Cell>
                    <Cell
                              Key={5}
                              addedClass=""
                              title=""
                    >
                              Professionalism
                    </Cell>
                    <Cell
                              Key={6}
                              addedClass=""
                              title=""
                    >
                              Integration
                    </Cell>
          </Row>
</Table>,
        <Loader />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <Row
              header={true}
>
              <Cell
                            Key={0}
                            addedClass=""
                            title=""
              >
                            Week
              </Cell>
              <Cell
                            Key={1}
                            addedClass=""
                            title=""
              >
                            Quantity
              </Cell>
              <Cell
                            Key={2}
                            addedClass=""
                            title=""
              >
                            Quality
              </Cell>
              <Cell
                            Key={3}
                            addedClass=""
                            title=""
              >
                            Initiative
              </Cell>
              <Cell
                            Key={4}
                            addedClass=""
                            title=""
              >
                            Communication
              </Cell>
              <Cell
                            Key={5}
                            addedClass=""
                            title=""
              >
                            Professionalism
              </Cell>
              <Cell
                            Key={6}
                            addedClass=""
                            title=""
              >
                            Integration
              </Cell>
</Row>,
            Array [],
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <Cell
                  Key={0}
                  addedClass=""
                  title=""
>
                  Week
</Cell>,
                <Cell
                  Key={1}
                  addedClass=""
                  title=""
>
                  Quantity
</Cell>,
                <Cell
                  Key={2}
                  addedClass=""
                  title=""
>
                  Quality
</Cell>,
                <Cell
                  Key={3}
                  addedClass=""
                  title=""
>
                  Initiative
</Cell>,
                <Cell
                  Key={4}
                  addedClass=""
                  title=""
>
                  Communication
</Cell>,
                <Cell
                  Key={5}
                  addedClass=""
                  title=""
>
                  Professionalism
</Cell>,
                <Cell
                  Key={6}
                  addedClass=""
                  title=""
>
                  Integration
</Cell>,
              ],
              "header": true,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "Key": 0,
                  "addedClass": "",
                  "children": "Week",
                  "title": "",
                },
                "ref": null,
                "rendered": "Week",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "Key": 1,
                  "addedClass": "",
                  "children": "Quantity",
                  "title": "",
                },
                "ref": null,
                "rendered": "Quantity",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "Key": 2,
                  "addedClass": "",
                  "children": "Quality",
                  "title": "",
                },
                "ref": null,
                "rendered": "Quality",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "Key": 3,
                  "addedClass": "",
                  "children": "Initiative",
                  "title": "",
                },
                "ref": null,
                "rendered": "Initiative",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "Key": 4,
                  "addedClass": "",
                  "children": "Communication",
                  "title": "",
                },
                "ref": null,
                "rendered": "Communication",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "Key": 5,
                  "addedClass": "",
                  "children": "Professionalism",
                  "title": "",
                },
                "ref": null,
                "rendered": "Professionalism",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "Key": 6,
                  "addedClass": "",
                  "children": "Integration",
                  "title": "",
                },
                "ref": null,
                "rendered": "Integration",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Table>
            <Row
                        header={true}
            >
                        <Cell
                                    Key={0}
                                    addedClass=""
                                    title=""
                        >
                                    Week
                        </Cell>
                        <Cell
                                    Key={1}
                                    addedClass=""
                                    title=""
                        >
                                    Quantity
                        </Cell>
                        <Cell
                                    Key={2}
                                    addedClass=""
                                    title=""
                        >
                                    Quality
                        </Cell>
                        <Cell
                                    Key={3}
                                    addedClass=""
                                    title=""
                        >
                                    Initiative
                        </Cell>
                        <Cell
                                    Key={4}
                                    addedClass=""
                                    title=""
                        >
                                    Communication
                        </Cell>
                        <Cell
                                    Key={5}
                                    addedClass=""
                                    title=""
                        >
                                    Professionalism
                        </Cell>
                        <Cell
                                    Key={6}
                                    addedClass=""
                                    title=""
                        >
                                    Integration
                        </Cell>
            </Row>
</Table>,
          <Loader />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <Row
                header={true}
>
                <Cell
                                Key={0}
                                addedClass=""
                                title=""
                >
                                Week
                </Cell>
                <Cell
                                Key={1}
                                addedClass=""
                                title=""
                >
                                Quantity
                </Cell>
                <Cell
                                Key={2}
                                addedClass=""
                                title=""
                >
                                Quality
                </Cell>
                <Cell
                                Key={3}
                                addedClass=""
                                title=""
                >
                                Initiative
                </Cell>
                <Cell
                                Key={4}
                                addedClass=""
                                title=""
                >
                                Communication
                </Cell>
                <Cell
                                Key={5}
                                addedClass=""
                                title=""
                >
                                Professionalism
                </Cell>
                <Cell
                                Key={6}
                                addedClass=""
                                title=""
                >
                                Integration
                </Cell>
</Row>,
              Array [],
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <Cell
                    Key={0}
                    addedClass=""
                    title=""
>
                    Week
</Cell>,
                  <Cell
                    Key={1}
                    addedClass=""
                    title=""
>
                    Quantity
</Cell>,
                  <Cell
                    Key={2}
                    addedClass=""
                    title=""
>
                    Quality
</Cell>,
                  <Cell
                    Key={3}
                    addedClass=""
                    title=""
>
                    Initiative
</Cell>,
                  <Cell
                    Key={4}
                    addedClass=""
                    title=""
>
                    Communication
</Cell>,
                  <Cell
                    Key={5}
                    addedClass=""
                    title=""
>
                    Professionalism
</Cell>,
                  <Cell
                    Key={6}
                    addedClass=""
                    title=""
>
                    Integration
</Cell>,
                ],
                "header": true,
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 0,
                    "addedClass": "",
                    "children": "Week",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Week",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 1,
                    "addedClass": "",
                    "children": "Quantity",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Quantity",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 2,
                    "addedClass": "",
                    "children": "Quality",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Quality",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 3,
                    "addedClass": "",
                    "children": "Initiative",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Initiative",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 4,
                    "addedClass": "",
                    "children": "Communication",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Communication",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 5,
                    "addedClass": "",
                    "children": "Professionalism",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Professionalism",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "Key": 6,
                    "addedClass": "",
                    "children": "Integration",
                    "title": "",
                  },
                  "ref": null,
                  "rendered": "Integration",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`tests the DevPulseTable renders correctly 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DevPulseTable
    loading={false}
    ratings={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "customStyle": Object {},
      "message": "There's currently no ratings for this fellow",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "customStyle": Object {},
        "message": "There's currently no ratings for this fellow",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
